--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.0.2</version>
                 <configuration>
-                    <source>15.0</source>
-                    <target>15.0</target>
+                    <source>15</source>
+                    <target>15</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -45,7 +45,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>ru.job4j</mainClass>
+                            <mainClass>ru.job4j.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
